# thekernel-ax

./: .gitignore  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.md  SECURITY.md
.github/workflows/: ci.yml
LICENSES/: README.md
crates/thekernel-axcbpf/: CHANGELOG.md  Cargo.toml  README.md
crates/thekernel-axcbpf/src/: instruction.rs  lib.rs  program.rs
crates/thekernel-axcbpf/tests/: classic.rs
crates/thekernel-axfault/: CHANGELOG.md  Cargo.toml  README.md
crates/thekernel-axfault/src/: lib.rs
crates/thekernel-axpoll/: .cargo_vcs_info.json  CHANGELOG.md  Cargo.toml  PATCHES.md  README.md  VENDOR.md
crates/thekernel-axpoll/src/: lib.rs
crates/thekernel-axpoll/tests/: async.rs  tests.rs
crates/thekernel-axsched/: .cargo_vcs_info.json  CHANGELOG.md  Cargo.toml  PATCHES.md  README.md  VENDOR.md
crates/thekernel-axsched/src/: cfs.rs  fifo.rs  lib.rs  round_robin.rs  tests.rs
crates/thekernel-axtask/: .cargo_vcs_info.json  CHANGELOG.md  Cargo.toml  PATCHES.md  README.md  VENDOR.md
crates/thekernel-axtask/src/: api.rs  api_s.rs  irq_continuation_diagnostics.rs  irq_exit.rs  lib.rs  run_queue.rs  task.rs  tests.rs  timers.rs  wait_queue.rs
crates/thekernel-axtask/src/future/: mod.rs  poll.rs  time.rs
crates/thekernel-axtlb/: CHANGELOG.md  Cargo.toml  README.md
crates/thekernel-axtlb/src/: lib.rs
docs/: PROVENANCE.md  RELEASE.md
docs/design/: 0001-eevdf-readiness.md
docs/releases/: 0.1.0.md
scripts/: check-provenance.sh  check_registry_dependencies.py  ci.sh  package-unpack-original.sh  package-unpack.sh  publish-dry-run.sh  test-axsched-msrv.sh
